using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Utils
{

    public class Utils
    {

        public static string ANIMATION_STATE_ATTACK = "performAttack";
        public static string ANIMATION_STATE_DEAD = "performDead";
        public static string ANIMATION_STATE_RESTED = "performRested";
        public static string ANIMATION_SKILL_FINISHED = "eliminate";
    }

}
